# wheretostargaze

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  cache.py  config.py  get_places.py  grok.py  main.py  map_data.json  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/services/: cloud_cover.py  cloud_cover_strategy.py  conversion_utils.py  coordinate_utils.py  get_astronomy_details.py  isochrone.py  light_pollution.py  places.py  tree_density.py
backend/tests/: conftest.py  test_api.py  test_isochrone.py  test_light_pollution.py  test_places.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/astro/: route.ts
frontend/app/map/: HeatmapLayer.tsx  LucideMarker.tsx  MapWithWaypoints.tsx  page.tsx  response.json
frontend/components/: BottomSheet.tsx  CalendarPopup.tsx  NewSpotForm.tsx  SettingsMenu.tsx  SpotInformation.tsx  Tonight.tsx  UserLocationProvider.tsx  UserMarker.tsx  useIsMobile.ts
frontend/lib/: types.d.ts  useUserLocation.ts
