[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AndrewLHellman",email = "142917243+AndrewLHellman@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "redis (>=7.0.1,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    # "black (>=25.9.0,<26.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
